bindings/python/llvm/core.py


    @visibility.setter
    def visibility(self, value):
        raise Exception('TODO implement.')

    @property
    def alignment(self):
        raise Exception('TODO implement.')

    @alignment.setter
    def alignment(self, value):
        raise Exception('TODO implement.')

    @property
    def initializer(self):
        raise Exception('TODO implement.')

    @initializer.setter
    def initializer(self, value):
        raise Exception('TODO implement.')

    @property
    def is_thread_local(self):
        raise Exception('TODO implement.')

    @is_thread_local.setter
    def is_thread_local(self, value):
        raise Exception('TODO implement.')

    @property
    def is_global_constant(self):
        raise Exception('TODO implement.')

    @is_global_constant.setter
    def is_global_constant(self, value):
        raise Exception('TODO implement.')

    def delete(self):
        """Delete this global value from its containing module."""
        self._get_ref('module').delete_global(self)

class FunctionValue(Value):
    @property
    def id(self):
        raise Exception('TODO implement.')

    def _get_calling_convention(self):
        raise Exception('TODO implement.')

    def _set_calling_convention(self, value):
        raise Exception('TODO implement.')

    calling_convention = property(_get_calling_convention,
            _set_calling_convention)

    def _get_gc(self):
        raise Exception('TODO implement.')

    def _set_gc(self, value):
        raise Exception('TODO implement.')

    gc = property(_get_gc, _set_gc)

    def delete(self):
        """Delete this function from its containing Module."""
        raise Exception('TODO implement.')

    @property
    def attribute(self):
        raise Exception('TODO implement.')

    def add_attribute(self, attribute):
        raise Exception('TODO implement.')

    def remove_attribute(self, attribute):
        raise Exception('TODO implement.')

    def get_parameters(self):
        ptr = lib.LLVMGetFirstParam(self)
        value = None
        while ptr:
            value = ArgumentValue(ptr, module=self._get_ref('module'))

            yield value

            ptr = lib.LLVMGetNextParam(value)

class ArgumentValue(Value):
    def add_attribute(self, attribute):
        raise Exception('TODO implement.')

    def remove_attribute(self, attribute):
        raise Exception('TODO implement.')

    def get_attribute(self, value):
        raise Exception('TODO implement.')

def register_library(library):
    """Register C APIs with ctypes library instance.

    This list is pretty long. We define APIs in alphabetical order for
    sanity.
    """
    library.LLVMAddAttribute.argtypes = [ArgumentValue, Attribute]

    library.LLVMAddFunctionAttr.argtypes = [FunctionValue, Attribute]

    library.LLVMArrayType.argtypes = [Type, c_uint]
    library.LLVMArrayType.restype = c_object_p

    library.LLVMContextCreate.restype = c_object_p

    library.LLVMContextDispose.argtypes = [Context]

    library.LLVMCountParamTypes.argtypes = [Type]
    library.LLVMCountParamTypes.restype = c_uint

    library.LLVMCountStructElementTypes.argtypes = [Type]
    library.LLVMCountStructElementTypes.restype = c_uint

    library.LLVMCreateMemoryBufferWithContentsOfFile.argtypes = [c_char_p,
            POINTER(c_object_p), POINTER(c_char_p)]
    library.LLVMCreateMemoryBufferWithContentsOfFile.restype = bool

    library.LLVMDeleteFunction.argtypes = [Value]

    library.LLVMDeleteGlobal.argtypes = [Value]

    library.LLVMDisposeMemoryBuffer.argtypes = [MemoryBuffer]

    library.LLVMDoubleTypeInContext.argtypes = [Context]
    library.LLVMDoubleTypeInContext.result = c_object_p

    library.LLVMFloatTypeInContext.argtypes = [Context]
    library.LLVMFloatTypeInContext.result = c_object_p

    library.LLVMFP128TypeInContext.argtypes = [Context]
    library.LLVMFP128TypeInContext.result = c_object_p

    library.LLVMFunctionType.argtypes = [Type, POINTER(c_object_p), c_uint,
            c_int]
    library.LLVMFunctionType.restype = c_object_p

    library.LLVMGetAlignment.argtypes = [GlobalValue]
    library.LLVMGetAlignment.restype = c_uint

    library.LLVMGetArrayLength.argtypes = [Type]
    library.LLVMGetArrayLength.restype = c_uint

    library.LLVMGetAttribute.argtypes = [ArgumentValue]
    library.LLVMGetAttribute.restype = c_int

    library.LLVMGetElementType.argtypes = [Type]
    library.LLVMGetElementType.restype = c_object_p

    library.LLVMGetFirstParam.argtypes = [FunctionValue]
    library.LLVMGetFirstParam.restype = c_object_p

    library.LLVMGetFunctionAttr.argtypes = [FunctionValue]
    library.LLVMGetFunctionAttr.restype = c_int

    library.LLVMGetFunctionCallConv.argtypes = [FunctionValue]
    library.LLVMGetFunctionCallConv.restype = c_uint

    library.LLVMGetGC.argtypes = [FunctionValue]
    library.LLVMGetGC.restype = c_char_p

    library.LLVMGetGlobalContext.restype = c_object_p

    library.LLVMGetInitializer.argtypes = [GlobalValue]
    library.LLVMGetInitializer.restype = c_object_p

    library.LLVMGetIntTypeWidth.argtypes = [Type]
    library.LLVMGetIntTypeWidth.restype = c_uint

    library.LLVMGetIntrinsicID.argtypes = [FunctionValue]
    library.LLVMGetIntrinsicID.restype = c_uint

    library.LLVMGetLinkage.argtypes = [GlobalValue]
    library.LLVMGetLinkage.restype = c_int

    library.LLVMGetNextFunction.argtypes = [Value]
    library.LLVMGetNextFunction.restype = c_object_p

    library.LLVMGetNextGlobal.argtypes = [Value]
    library.LLVMGetNextGlobal.restype = c_object_p

    library.LLVMGetNextParam.argtypes = [Value]
    library.LLVMGetNextParam.restype = c_object_p

    library.LLVMGetParamTypes.argtypes = [Type, POINTER(c_object_p)]

    library.LLVMGetPointerAddressSpace.argtypes = [Type]
    library.LLVMGetPointerAddressSpace.restype = c_uint

    library.LLVMGetReturnType.argtypes = [Type]
    library.LLVMGetReturnType.restype = c_object_p

    library.LLVMGetSection.argtypes = [GlobalValue]
    library.LLVMGetSection.restype = c_char_p

    library.LLVMGetStructElementTypes.argtypes = [Type, POINTER(c_object_p)]

    library.LLVMGetStructName.argtypes = [Type]
    library.LLVMGetStructName.restype = c_char_p

    library.LLVMGetTypeKind.argtypes = [Type]
    library.LLVMGetTypeKind.restype = c_int

    library.LLVMGetVectorSize.argtypes = [Type]
    library.LLVMGetVectorSize.restype = c_uint

    library.LLVMGetVisibility.argtypes = [GlobalValue]
    library.LLVMGetVisibility.restype = c_int

    library.LLVMHalfTypeInContext.argtypes = [Context]
    library.LLVMHalfTypeInContext.result = c_object_p

    library.LLVMInt1TypeInContext.argtypes = [Context]
    library.LLVMInt1TypeInContext.result = c_object_p

    library.LLVMInt8TypeInContext.argtypes = [Context]
    library.LLVMInt8TypeInContext.result = c_object_p

    library.LLVMInt16TypeInContext.argtypes = [Context]
    library.LLVMInt16TypeInContext.result = c_object_p

    library.LLVMInt32TypeInContext.argtypes = [Context]
    library.LLVMInt32TypeInContext.result = c_object_p

    library.LLVMInt64TypeInContext.argtypes = [Context]
    library.LLVMInt64TypeInContext.result = c_object_p

    library.LLVMIntTypeInContext.argtypes = [Context, c_uint]
    library.LLVMIntTypeInContext.result = c_object_p

    library.LLVMIsDeclaration.argtypes = [GlobalValue]
    library.LLVMIsDeclaration.restype = c_bool

    library.LLVMIsFunctionVarArg.argtypes = [Type]
    library.LLVMIsFunctionVarArg.restype = c_bool

    library.LLVMIsGlobalConstant.argtypes = [GlobalValue]
    library.LLVMIsGlobalConstant.restype = c_bool

    library.LLVMIsOpaqueStruct.argtypes = [Type]
    library.LLVMIsOpaqueStruct.restype = c_bool

    library.LLVMIsPackedStruct.argtypes = [Type]
    library.LLVMIsPackedStruct.restype = c_bool

    library.LLVMIsThreadLocal.argtypes = [GlobalValue]
    library.LLVMIsThreadLocal.restype = c_bool

    library.LLVMLabelTypeInContext.argtypes = [Context]
    library.LLVMLabelTypeInContext.result = c_object_p

    library.LLVMPPCFP128TypeInContext.argtypes = [Context]
    library.LLVMPPCFP128TypeInContext.result = c_object_p

    library.LLVMPointerType.argtypes = [Type, c_uint]
    library.LLVMPointerType.restype = c_object_p

    library.LLVMRemoveAttribute.argtypes = [ArgumentValue, Attribute]

    library.LLVMRemoveFunctionAttr.argtypes = [FunctionValue, Attribute]

    library.LLVMSetAlignment.argtypes = [GlobalValue, c_uint]

    library.LLVMSetFunctionCallConv.argtypes = [FunctionValue, c_uint]

    library.LLVMSetGC.argtypes = [FunctionValue, c_char_p]

    library.LLVMSetGlobalConstant.argtypes = [GlobalValue]

    library.LLVMSetInitializer.argtypes = [GlobalValue, ConstantValue]

    library.LLVMSetLinkage.argtypes = [GlobalValue, c_int]

    library.LLVMSetSection.argtypes = [GlobalValue, c_char_p]

    library.LLVMSetThreadLocal.argtypes = [GlobalValue]

    library.LLVMSetVisibility.argtypes = [GlobalValue, c_int]

    library.LLVMStructCreateNamed.argtypes = [Context, c_char_p]
    library.LLVMStructCreateNamed.restype = c_object_p

    library.LLVMStructSetBody.argtypes = [Type, POINTER(c_object_p), c_uint,
            c_int]

    library.LLVMStructTypeInContext.argtypes = [Context, POINTER(c_object_p),
            c_uint, c_int]
    library.LLVMStructTypeInContext.result = c_object_p

    library.LLVMTypeIsSized.argtypes = [Type]
    library.LLVMTypeIsSized.restype = c_bool

    library.LLVMVectorType.argtypes = [Type, c_uint]
    library.LLVMVectorType.restype = c_object_p

    library.LLVMVoidTypeInContext.argtypes = [Context]
    library.LLVMVoidTypeInContext.result = c_object_p

    library.LLVMX86FP80TypeInContext.argtypes = [Context]
    library.LLVMX86FP80TypeInContext.result = c_object_p

    library.LLVMX86MMXTypeInContext.argtypes = [Context]
    library.LLVMX86MMXTypeInContext.result = c_object_p

def register_enumerations():
    for name, value in enumerations.OpCodes:
        OpCode.register(name, value)

    for name, value in enumerations.TypeKinds:
        TypeKind.register(name, value)

register_library(lib)
register_enumerations()
